cleaning blahblah, initial log4net

--- a/testing/testing/testing.csproj
+++ b/testing/testing/testing.csproj
@@ -43,6 +43,9 @@
     <Reference Include="itextsharp">
       <HintPath>..\..\..\..\..\Downloads\Migration\Codes\iTextSharp\itextsharp.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.4\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="PdfSharp">
       <HintPath>..\..\..\..\..\Downloads\Migration\Codes\PDFsharp-MigraDocFoundation-Assemblies-1_32\GDI+\PdfSharp.dll</HintPath>
     </Reference>
@@ -72,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="testingSchema.xsd">
       <SubType>Designer</SubType>
     </None>
