--- a/testing/packages/repositories.config
+++ b/testing/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\testing\packages.config" />
+  <repository path="..\TestingAntlr\packages.config" />
+  <repository path="..\TestingAntlrGrammar\packages.config" />
 </repositories>
