first html converter version

--- a/Test_iText/Test_iText/Test_iText.csproj
+++ b/Test_iText/Test_iText/Test_iText.csproj
@@ -62,7 +62,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="PDFToHTML.xslt" />
+    <Content Include="PdfPage.xslt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
