--- a/testing/testing/testing.csproj
+++ b/testing/testing/testing.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,6 +62,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DOL_WWS.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DOL_WWS.edmx</DependentUpon>
+    </Compile>
     <Compile Include="MyClass.cs" />
     <Compile Include="MyTiffErrorHandler.cs" />
     <Compile Include="PageNumMismatchException.cs" />
@@ -76,6 +83,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <EntityDeploy Include="DOL_WWS.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DOL_WWS.Designer.cs</LastGenOutput>
+    </EntityDeploy>
     <None Include="packages.config" />
     <None Include="testingSchema.xsd">
       <SubType>Designer</SubType>
