--- a/Fundamentals/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals/Fundamentals.csproj
@@ -55,12 +55,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestDynamicProgramming.cs" />
     <Compile Include="TestAlgorithms\TestSorting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDataStructures\TestGraphs.cs" />
     <Compile Include="TestDataStructures\TestHeaps.cs" />
     <Compile Include="TestDataStructures\TestStrings.cs" />
     <Compile Include="TestDataStructures\TestTrees.cs" />
+    <Compile Include="TestOnlineJudges\TestLeetCode.cs" />
     <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +73,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
