--- a/Fundamentals/Fundamentals/packages.config
+++ b/Fundamentals/Fundamentals/packages.config
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="Microsoft.CodeCoverage" version="15.8.0" targetFramework="net461" />
+  <package id="Microsoft.NET.Test.Sdk" version="15.8.0" targetFramework="net461" />
+  <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
-  <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.9.0" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitV2Driver" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net461" />
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.4" targetFramework="net461" />
-  <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net461" />
-  <package id="NUnit.Runners" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit.Runners" version="3.9.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
 </packages>
