--- a/Fundamentals/Fundamentals/Fundamentals.csproj
+++ b/Fundamentals/Fundamentals/Fundamentals.csproj
@@ -64,6 +64,7 @@
     <Compile Include="TestDataStructures\TestHeaps.cs" />
     <Compile Include="TestDataStructures\TestStrings.cs" />
     <Compile Include="TestDataStructures\TestTrees.cs" />
+    <Compile Include="TestOnlineJudges\TestCodility.cs" />
     <Compile Include="TestOnlineJudges\TestHackerRank.cs" />
     <Compile Include="TestOnlineJudges\TestLeetCode.cs" />
     <Compile Include="TestFundamentals.cs" />
